--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body {
 /* ---------HEADER-------------- */
 
 header {
+  font-size: 1.2em;
   background-color: #46424D;
   padding: 15px;
   text-align: center;
@@ -35,7 +36,8 @@ main {
 }
 
 .main-title {
-  margin: 20px 0px 5px 18px; 
+  font-size: 1.2em;
+  margin: 20px 0px 10px 18px;
   color: #CBC9CF;
 }
 
@@ -52,7 +54,18 @@ main {
 
 /* ---------FORM CARD------------- */
 
+form {
+  margin: 0px 20px 30px 20px;
+  padding: 40px 80px;
+  background-color: #46424D;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 
+form > * {
+  margin: 30px; 
+}
 
 
 /* -------PAST ACTIVITY CARDS-------- */
