--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,66 @@ form {
 }
 
 form > * {
-  margin: 30px; 
+  margin: 30px;
+}
+
+form > h2 {
+  margin-bottom: 0px;
+}
+
+.category {
+  display: flex;
+  justify-content: space-between;
 }
 
 
+.category-input {
+  -webkit-appearance: none;
+
+}
+
+ .category-label {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   height: 55px;
+   width: 100px;
+   /* width: 50%;
+   height: 27.5%; */
+   border-radius: 3px;
+   border: solid;
+}
+
+.category-icon {
+  height: 22px;
+  width: 22px;
+  align-self: center;
+}
+
+.button-title {
+  align-self: center;
+}
+
+.study-box:checked + label {
+  border-color: #B3FD78;
+  color: #B3FD78;
+}
+
+.meditate-box:checked + label {
+  border-color: #C278FD;
+  color: #C278FD;
+}
+
+.exercise-box:checked + label {
+  border-color: #FD8078;
+  color: #FD8078;
+}
+
+
+
 /* -------PAST ACTIVITY CARDS-------- */
+
+
+.hidden {
+  display: none;
+}
