--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,20 @@ form > * {
   margin: 30px;
 }
 
-form > h2 {
+ h2 {
+   font-size: 1em;
   margin-bottom: 0px;
 }
 
 .category {
   display: flex;
   justify-content: space-between;
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  flex-basis: 25%;
 }
 
 
@@ -86,12 +93,10 @@ form > h2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
-   height: 55px;
-   width: 100px;
-   /* width: 50%;
-   height: 27.5%; */
+   flex-basis: 30%;
    border-radius: 3px;
-   border: solid;
+   border: 2px solid;
+   padding: 10px 30px;
 }
 
 .category-icon {
@@ -102,6 +107,7 @@ form > h2 {
 
 .button-title {
   align-self: center;
+  margin-top: 3px; 
 }
 
 .study-box:checked + label {
