--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,7 @@ Error: #EFB7EC */
 * {
 margin: 0;
 font-family: 'Montserrat', sans-serif;
-}
-
-body {
-  color: #FFF;
+color: #FFF;
 }
 
 /* ---------HEADER-------------- */
@@ -36,7 +33,7 @@ main {
 }
 
 .main-title {
-  font-size: 1.2em;
+  font-size: 1.4em;
   margin: 20px 0px 10px 18px;
   color: #CBC9CF;
 }
@@ -51,16 +48,18 @@ main {
   flex: 1;
 }
 
-
 /* ---------FORM CARD------------- */
 
 form {
   margin: 0px 20px 30px 20px;
   padding: 40px 80px;
   background-color: #46424D;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  border-radius: 3px;
+  height: 75%;
 }
 
 form > * {
@@ -72,7 +71,7 @@ form > * {
   margin-bottom: 0px;
 }
 
-.category {
+.category-container {
   display: flex;
   justify-content: space-between;
   list-style-type: none;
@@ -127,12 +126,85 @@ li {
 
 /* ----------activity inputs----------- */
 
-.activity {
+.activity-container {
   display: flex;
   flex-direction: column;
-    list-style-type: none;
-    padding: 0;
+  /* flex-wrap: wrap; */
+  justify-content: space-between;
+  list-style-type: none;
+  padding: 0;
 }
+
+/* .activity-list {
+  flex: 1 0 50%;
+}
+
+.activity-list:first-child {
+  flex: 0 1 100%;
+} */
+
+.activity-time-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.activity-input-label {
+  display: block;
+}
+
+.activity-input {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #CBC9CF;
+  margin-top: 20px;
+  color: #CBC9CF;
+  font-size: 1em;
+
+}
+
+.input-line {
+  width: 100%;
+}
+
+.activity-input {
+  outline: none;
+}
+
+.activity-button {
+  color: #000000;
+  border: none;
+  border-radius: 2px;
+  height: 32px;
+  width: 152px;
+  align-self: flex-end;
+}
+
+.activity-list-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.activity-list {
+  flex-basis: 80%;
+}
+
+
+/* ----------past activities section------ */
+
+.past-activities-default {
+  color: #CBC9CF;
+  text-align: center;
+}
+
+.main-right-box-default {
+  margin: 40px 30px 0px 30px; 
+}
+
+
+
+
+
 
 
 
