--- a/styles.css
+++ b/styles.css
@@ -57,18 +57,17 @@ form {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   border-radius: 3px;
   height: 75%;
 }
 
 form > * {
-  margin: 30px;
+  margin: 35px;
 }
 
  h2 {
    font-size: 1em;
-  margin-bottom: 0px;
+   margin-bottom: 15px;
 }
 
 .category-container {
@@ -76,12 +75,8 @@ form > * {
   justify-content: space-between;
   list-style-type: none;
   padding: 0;
+  margin-top: 0;
 }
-
-li {
-  flex-basis: 25%;
-}
-
 
 .category-input {
   -webkit-appearance: none;
@@ -129,19 +124,10 @@ li {
 .activity-container {
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
   justify-content: space-between;
   list-style-type: none;
   padding: 0;
 }
-
-/* .activity-list {
-  flex: 1 0 50%;
-}
-
-.activity-list:first-child {
-  flex: 0 1 100%;
-} */
 
 .activity-input-label {
   display: block;
@@ -190,22 +176,8 @@ li {
 }
 
 .main-right-box-default {
-  margin: 40px 30px 0px 30px;
+  margin: 40px 40px 0px 40px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-/* -------PAST ACTIVITY CARDS-------- */
-
 
 .hidden {
   display: none;
