--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,33 @@ form > * {
   flex-basis: 40%;
 }
 
+/* ------------Timer--------------- */
+
+.timer-container {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 1.2em;
+}
+
+.timer {
+  font-weight: bold;
+  font-size: 3.2em;
+}
+
+.timer-button {
+  background: transparent;
+  margin-top: 55px;
+  height: 200px;
+  width: 200px;
+  border-radius: 100px;
+  border: solid;
+  color: #FFF;
+  font-size: 1.3em; 
+}
+
+.timer-border {
+  border
+}
 
 /* ----------past activities section------ */
 
