Style error messages

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,18 @@ form > * {
   color: #FD8078;
 }
 
+.error-message {
+  color: #EFB7EC;
+  font-size: 1em;
+  margin-top: 10px;
+}
+
+.warning-icon {
+  height: .9em;
+  width: .9em;
+  margin: 10px 3px 0px 0px;
+}
+
 /* ----------activity inputs----------- */
 
 .activity-container {
@@ -214,13 +226,4 @@ form > * {
 
 .hidden {
   display: none;
-}
-
-.error-message {
-  color: #EFB7EC;
-}
-
-.warning-icon {
-  height: 10px;
-  width: 5px;
 }
