--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,7 @@ form > * {
   color: #EFB7EC;
   font-size: 1em;
   margin-top: 10px;
+  visibility: none;
 }
 
 .warning-icon {
@@ -226,4 +227,16 @@ form > * {
 
 .hidden {
   display: none;
+}
+
+.visibility-hidden {
+  visibility: hidden;
+}
+
+.margin-0 {
+  margin-top: 0;
+}
+
+.error-message-color {
+  border-color: #EFB7EC;
 }
