Added styling for timer activity text

--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,12 @@ form > * {
   border
 }
 
+.timer-activity-class {
+  font-size: .8em;
+  color: #CBC9CF;
+
+}
+
 /* ----------past activities section------ */
 
 .past-activity-default {
