Style past activity card

--- a/styles.css
+++ b/styles.css
@@ -190,6 +190,18 @@ form > * {
 
 /* ------------Timer--------------- */
 
+.meditate-color {
+  border-color: #C278FD;
+}
+
+.study-color {
+   border-color: #B3FD78
+}
+
+.exercise-color {
+  border-color: #FD8078;
+}
+
 .timer-container {
   text-align: center;
   font-size: 1.2em;
@@ -224,20 +236,34 @@ form > * {
   text-align: center;
 }
 
-.past-activity-container {
+.default-text-wrapper {
   margin: 40px 40px 0px 40px;
 }
 
 .past-activity-card {
+  display: flex;
+  flex-direction: column;
   list-style-type: none;
   background-color: #46424D;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
   border-radius: 3px;
+  margin: 0px 20px;
   padding: 0;
+}
+
+.past-activity {
+  flex: 1;
+  border-right: solid; */
+  border-radius: 3px;
+}
+
+.card {
+  margin: 10px;
 }
 
 .past-activity-category {
   font-weight: bold;
+  font-size: .8em;
 }
 
 .past-activity-time, .past-activity-description {
@@ -245,6 +271,8 @@ form > * {
 }
 
 .past-activity-description {
+  margin-top: 10px;
+  flex: 1;
   font-style: italic;
   font-size: .9em;
 }
