--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ Error: #EFB7EC */
 * {
 margin: 0;
 font-family: 'Montserrat', sans-serif;
-font-size: 20px;
+/* font-size: 20px; */
 }
 
 body {
@@ -67,7 +67,7 @@ form {
   flex-direction: column;
   justify-content: space-around;
   border-radius: 3px;
-
+  font-size: 20px;
 }
 
 form > * {
