--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ form > * {
    flex-basis: 30%;
    border-radius: 3px;
    border: 2px solid;
-   padding: 15px 55px;
+   padding: 15px 50px;
 }
 
 .category-icon {
@@ -184,6 +184,7 @@ margin-top: -15px;
   border-radius: 2px;
   align-self: flex-end;
   padding: 7px 20px;
+  font-size: 20px;
 }
 
 .activity-list-container {
