Restyle timer button and log activity button

--- a/styles.css
+++ b/styles.css
@@ -220,9 +220,9 @@ form > * {
 .timer-button {
   background: transparent;
   margin-top: 55px;
-  height: 200px;
-  width: 200px;
-  border-radius: 100px;
+  height: 45%;
+  width: 35%;
+  border-radius: 5em;
   border: solid;
   color: #FFF;
   font-size: 1.3em;
@@ -253,9 +253,19 @@ form > * {
 } */
 
 .timer-activity-text {
-  font-size: 1em;
+  font-size: 1.1em;
   color: #CBC9CF;
 
+}
+
+.log-activity {
+  align-self: center;
+  margin: 5%;
+  padding: 7px 20px;
+  width: 35%;
+  border-radius: 5px;
+  border: 0px;
+  font-size: 1em;
 }
 
 
