--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,16 @@ margin-top: -15px;
 
 /* ------------Timer--------------- */
 
+.create-new-activity {
+  padding: 7px 20px;
+  width: 50%;
+  height: 8%;
+  border-radius: 5px;
+  border: 0;
+  margin-top: 50px;
+  font-size: 1em;
+}
+
 .meditate-color {
   border-color: #C278FD;
 }
