Restyle create new activity button

--- a/styles.css
+++ b/styles.css
@@ -199,16 +199,6 @@ margin-top: -15px;
 
 /* ------------Timer--------------- */
 
-.create-new-activity {
-  padding: 7px 20px;
-  width: 50%;
-  height: 8%;
-  border-radius: 5px;
-  border: 0;
-  margin-top: 50px;
-  font-size: 1em;
-}
-
 .meditate-color {
   border-color: #C278FD;
 }
@@ -271,6 +261,18 @@ margin-top: -15px;
   font-size: 1em;
 }
 
+/* Create new activity button */
+
+.create-new-activity {
+  padding: 7px 20px;
+  width: 50%;
+  height: 6%;
+  border-radius: 5px;
+  border: 0;
+  margin: 5% 30% 60% 25%;
+  font-size: 1.2em;
+  text-align: center;
+}
 
 /* ----------past activities section------ */
 
