--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,20 @@ form > * {
    margin-bottom: 20px;
 }
 
+.error-message {
+  color: #EFB7EC;
+  font-size: 1em;
+  margin-top: 10px;
+  visibility: none;
+}
+
+.warning-icon {
+  height: .9em;
+  width: .9em;
+  margin: 10px 3px 0px 0px;
+}
+/* -------------CATEGORY BUTTONS------------- */
+
 .category-container {
   display: flex;
   justify-content: space-between;
@@ -105,7 +119,7 @@ form > * {
   align-self: center;
 }
 
-.button-title {
+.category-button-title {
   align-self: center;
   margin-top: 3px;
   font-size: 1em;
@@ -125,20 +139,6 @@ form > * {
   border-color: #FD8078;
   color: #FD8078;
 }
-
-.error-message {
-  color: #EFB7EC;
-  font-size: 1em;
-  margin-top: 10px;
-  visibility: none;
-}
-
-.warning-icon {
-  height: .9em;
-  width: .9em;
-  margin: 10px 3px 0px 0px;
-}
-
 /* ----------activity inputs----------- */
 
 .activity-container {
