--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,3 @@
-/* Main background: #2B2733
-Text on main background: #CBC9CF
-Header, cards: #46424D
-Card shadow: #26222D
-Text on header and cards: #FFF
-Study: #B3FD78
-Meditate: #C278FD
-Exercise: #FD8078
-Error: #EFB7EC */
-
 
 * {
 margin: 0;
@@ -139,7 +129,7 @@ form > * {
   border-color: #FD8078;
   color: #FD8078;
 }
-/* ----------activity inputs----------- */
+/* ----------ACTIVITY INPUTS----------- */
 
 .activity-container {
   display: flex;
@@ -149,15 +139,7 @@ form > * {
 }
 
 .activity-input-label {
-  display: block;
-}
-
-.activity-text-input-label {
-  margin-top: -20px;
-}
-
-.activity-time-input-label {
-margin-top: -15px;
+  margin-top: -15px;
 }
 
 .activity-input {
@@ -167,10 +149,6 @@ margin-top: -15px;
   margin-top: 20px;
   color: #CBC9CF;
   font-size: 1em;
-
-}
-
-.activity-input {
   width: 100%;
   outline: none;
 }
