--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ form > * {
   margin: 20px;
 }
 
- h2 {
+h2 {
    font-size: 1em;
    margin-bottom: 20px;
 }
@@ -94,14 +94,14 @@ form > * {
   -webkit-appearance: none;
 }
 
- .category-label {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   flex-basis: 30%;
-   border-radius: 3px;
-   border: 2px solid;
-   padding: 15px 50px;
+.category-label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-basis: 30%;
+  border-radius: 3px;
+  border: 2px solid;
+  padding: 15px 50px;
 }
 
 .category-icon {
@@ -239,7 +239,7 @@ form > * {
   text-align: center;
 }
 
-/* ----------past activities section------ */
+/* ----------PAST ACTIVITIES SECTION------ */
 
 .past-activity-default {
   font-size: .8em;
@@ -264,7 +264,7 @@ form > * {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.4);
   border-radius: 3px;
   margin: 20px 20px;
-  padding: 0;
+  color: #CBC9CF;
 }
 
 .past-activity {
@@ -283,14 +283,10 @@ form > * {
   font-weight: bold;
   font-size: .9em;
   align-self: flex-start;
-}
-
-.past-activity-time, .past-activity-description {
-  color: #CBC9CF;
+  color: #FFF;
 }
 
 .color-icon{
-  background-color: white;
   height: 30px;
   width: 5px;
   border-radius: 5px;
@@ -304,7 +300,7 @@ form > * {
   font-size: .9em;
 }
 
-/* -------SINGLE PROP COLOR CLASSES---------------- */
+/* ----------COLORS------------- */
 
 .timer-study-color {
    border-color: #B3FD78;
@@ -333,7 +329,8 @@ form > * {
 .card-exercise-color {
   background-color: #FD8078;
 }
-/*-------------HIDDEN------------- */
+
+/*-------------STATE------------- */
 
 .hidden {
   display: none;
