--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ h2 {
 }
 
 .timer {
-  font-family: 'Montserrat400', sans-serif; font-family;
+  font-family: 'Montserrat400', sans-serif;
   font-weight: bold;
   font-size: 4.3em;
 }
